--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Coffee Leaves Disease Prediction</title>
+    <link rel="shortcut icon" href="Group 37.png" title="Favicon">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Styles for the spinner */
